# WinRT-D11gEngine-

./: .gitignore  Başlıksız Diyagram.drawio  CMakeLists.txt  bootstrap.py
DX11GameEngine/: DX11GameEngine.sln
DX11GameEngine/DX11GameEngine/: BasicVertexShader.hlsl  D3D11Depends.h  DX11GameEngine.vcxproj  DX11GameEngine.vcxproj.filters  EntryP.cpp  ShBasicColoredPixelShader.h  ShBasicColoredVertexShader.h  ShBasicPixelShader.h  ShBasicVertexShader.h  ShCameraTexturePixelShader.h  ShCameraTextureVertexShader.h  ShColorCameraPixelShader.h  ShColorCameraVertexShader.h  WindowsMessageMap.cpp  imgui.ini
DX11GameEngine/DX11GameEngine/CameraSystem/: CameraEntity.cpp  CameraEntity.h  CameraSystem.h  FPSCameraPositioner.cpp  FPSCameraPositioner.h  ICameraPositioner.h  MoveToCameraPositioner.cpp  MoveToCameraPositioner.h
DX11GameEngine/DX11GameEngine/Common/: HRHelper.cpp  HRHelper.h  VertexTypes.h  imgui_wrapper.h
DX11GameEngine/DX11GameEngine/EntitySystem/: Cube.cpp  Cube.h  IDrawableEntity.h  IEntity.h  Sphere.cpp  Sphere.h
DX11GameEngine/DX11GameEngine/Exception/: DxException..h  DxException.cpp
DX11GameEngine/DX11GameEngine/Game/: GameMain.cpp  GameMain.h
DX11GameEngine/DX11GameEngine/Geometry/: GeometryGenerator.cpp  GeometryGenerator.h
DX11GameEngine/DX11GameEngine/Graphic/: CameraTestRenderer.cpp  CameraTestRenderer.h  DepthTestRenderer.cpp  DepthTestRenderer.h  IRenderer.h  IRenderer2.h  IRenderer3.h
DX11GameEngine/DX11GameEngine/InputSystem/: IInputSystem.h  InputSystem.cpp  InputSystem.h  VirtualKeyCodes.h
DX11GameEngine/DX11GameEngine/Material/: MaterialType.h
DX11GameEngine/DX11GameEngine/RendererSystem/: DebugRendererSystem.cpp  DebugRendererSystem.h  IRendererSystem.h  ImGuiRenderer.cpp  ImGuiRenderer.h
DX11GameEngine/DX11GameEngine/Shaders/: BasicColoredVertexShader.hlsl  CameraTexturePixelShader.hlsl  CameraTextureVertexShader.hlsl  ColorCameraPixelShader.hlsl  ColorCameraVertexShader.hlsl
DX11GameEngine/DX11GameEngine/Window/: IWindow32.h  IWindow32Class.h  MainWindow.cpp  MainWindow.h  WindowDesc.h
Dx11GameEngine/: Dx11GameEngine.sln
Dx11GameEngine/DLLs/GTexturing/: Bitmap.h  GTexturing.vcxproj  GTexturing.vcxproj.filters  UtilsCubemap.cpp  UtilsCubemap.h  cpp.hint  framework.h  pch.cpp
Dx11GameEngine/Dx11GameEngine/: Dx11GameEngine.vcxproj  Dx11GameEngine.vcxproj.filters  EntryP.cpp  GTexturing.lib  directx_wrapper.cpp  directx_wrapper.h  imgui.ini  imgui_wrapper.h  pch.cpp  pch.h  taskflow_output.txt
Dx11GameEngine/Dx11GameEngine/Common/: IResource.cpp  IResource.h  IResource_1.cpp  IResource_1.h  Logger.cpp  Logger.h
Dx11GameEngine/Dx11GameEngine/Core/: Game.cpp  Game.h  IEngineManager.cpp  IEngineManager.h  IEngineManager_1.cpp  IEngineManager_1.h  Skybox.cpp  Skybox.h  TextureManager.cpp  TextureManager.h
Dx11GameEngine/Dx11GameEngine/Entitiy/: IEntity.cpp  IEntity.h  Triangle2D.cpp  Triangle2D.h
Dx11GameEngine/Dx11GameEngine/GUI/: EntityNode.cpp  EntityNode.h  IFixedWindowChild.cpp  IFixedWindowChild.h  Icon.cpp  Icon.h  Icon_1.cpp  Icon_1.h  MenuBar.cpp  MenuBar.h
Dx11GameEngine/Dx11GameEngine/Renderer/: ImGuiRenderer.cpp  ImGuiRenderer.h  RendererBase.h  SceneRenderer.cpp  SceneRenderer.h
GameEngineRT/: GameEngineRT.sln
GameEngineRT/GameEngineRT/: App.cpp  AppView.cpp  AppView.h  DirectXManager.cpp  DirectXManager.h  GTimer2.cpp  GTimer2.h  GameEngineRT.vcxproj  GameEngineRT.vcxproj.filters  Package.appxmanifest  ShBasicPixelShader.h  ShBasicVertexShader.h  pch.h  readme.txt
VulkanGameEngine/: CMakeLists.txt  VulkanGameEngine.cpp
VulkanGameEngine/config/: config.cpp  config.h  config_prop.h  config_prop_base.h  config_utils.cpp  config_utils.h
VulkanGameEngine/core/: engine.h  folders.h  graphic_api.h  scope.h  typedefs.h  vec2.h  version.h
VulkanGameEngine/core/event/: plugin_events_defs.h
VulkanGameEngine/core/io/: dynamic_library.cpp  dynamic_library.h  io_utils.h  logger.cpp  logger.h
VulkanGameEngine/core/object/: object.h  object_id.h
VulkanGameEngine/core/serialize/: serializable_enum.h  serializable_struct.h
VulkanGameEngine/core/string/: locales.h  string_types.h  string_utils.cpp  string_utils.h  unicode_char_range.h  unicode_char_utils.cpp  unicode_char_utils.h
VulkanGameEngine/core/templates/: node.h  safe_num.h
VulkanGameEngine/exception/: file_not_found_ex.h
VulkanGameEngine/graphic/: graphic_api.h  physical_device.h
VulkanGameEngine/graphic/vulkan/: imgui_draw.cpp  imgui_draw.h  physical_device_vulkan.h  render_device_vulkan.cpp  render_device_vulkan.h  utils_vulkan.h  volk.c  volk.h
VulkanGameEngine/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp
VulkanGameEngine/platform/GLFW/: window_server_glfw.cpp  window_server_glfw.h
VulkanGameEngine/plugin/: plugin.h  plugin_adapter.h  plugin_native.cpp  plugin_native.h  plugin_native_event.cpp  plugin_native_event.h
VulkanGameEngine/plugin/native_include/: plugin_common_types.h  plugin_defs.h  plugin_events.h  plugin_excepts.h  plugin_interface.h  plugin_native_event_types.h  plugin_server_types.h
VulkanGameEngine/plugin/pinclude/: basic_shared_types.h
VulkanGameEngine/servers/: configuration_server.cpp  configuration_server.h  creation_server.cpp  creation_server.h  event_bus_server.cpp  event_bus_server.h  logger_server.cpp  logger_server.h  plugin_server.cpp  plugin_server.h  thread_pool_server.cpp  thread_pool_server.h  window_server.cpp  window_server.h
VulkanGameEngine/servers/localization/: localization_server.cpp  localization_server.h
VulkanGameEngine/servers/rendering/: render_dev.cpp  render_dev.h  render_device.cpp  render_device.h  render_imgui.cpp  render_imgui.h
VulkanGameEngine/window/: viewport.cpp  viewport.h  window.h  window_id.h
data/config/: config.json
resources/locales/: SupportedUnicodes.txt
(+145 files in other folders)
